<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark">

            <Button
                android:textAllCaps="false"
                android:id="@+id/btn_BleConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BLEConnect"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_gravity="top"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lpmsb2"
                android:textSize="30sp"
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <Button
                android:textAllCaps="false"
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="bottom"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    <ListView
        android:id="@+id/listView_B2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.00"
        android:choiceMode="multipleChoice"
        android:clickable="true"
        android:focusable="false"
        >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.04">

        <Button
            android:id="@+id/btn_BLEScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BLE_scan"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btn_ClassicScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Classic_scan"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            />

    </LinearLayout>


</LinearLayout>
